build(root): remove unused property `springLoadedCommonOptions`